[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pBar.png" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[node name="Control" type="Control"]
margin_left = 8.0
margin_top = -12.0
margin_right = 1032.0
margin_bottom = 590.0
theme = SubResource( 3 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.0
margin_top = -53.0
margin_right = 286.0
margin_bottom = 47.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 150

[node name="ProgressBar1" type="ProgressBar" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 100, 110 )
rect_clip_content = true
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0

[node name="TextureProgress2" type="TextureProgress" parent="HBoxContainer"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
rect_clip_content = true
value = 100.0
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="TextureProgress3" type="TextureProgress" parent="HBoxContainer"]
margin_left = 500.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 100, 110 )
rect_clip_content = true
value = 100.0
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 151.0
margin_top = 378.0
margin_right = 389.0
margin_bottom = 459.0
text = "PASA EL MOUSE PARA CAMBIAR COLOR ALEATORIAMENTE"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 199.0
margin_right = 438.0
margin_bottom = 280.0
text = "ProgressBar"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 455.0
margin_top = 198.0
margin_right = 693.0
margin_bottom = 279.0
text = "TextureBar"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
margin_left = 704.0
margin_top = 198.0
margin_right = 942.0
margin_bottom = 279.0
text = "TextureBar"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 652.0
margin_top = 376.0
margin_right = 890.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 41 )
text = "PASA EL MOUSE PARA RESTAR 10 DE VIDA"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 390.0
margin_top = 376.0
margin_right = 628.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 41 )
text = "PASA EL MOUSE PARA GIRAR LA BARRA"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="HBoxContainer/ProgressBar1" to="." method="_on_ProgressBar1_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/TextureProgress2" to="." method="_on_TextureProgress2_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/TextureProgress3" to="." method="_on_TextureProgress3_mouse_entered"]
